# android-crow-viewer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/android_crow_viewer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/crow/: crow
app/src/main/java/com/example/android_crow_viewer/: MainActivity.kt  VideoSubscriber.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/android_crow_viewer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
